# tinyshader

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  combine.sh  test.bat  test.sh  test_dxc.sh
.github/workflows/: build.yml
examples/: hello.hlsl  test.hlsl  test_compute.hlsl
src/: tinyshader.c  tinyshader.h  tsc.c  tsc.h  tscc.c
tests/: run_tests.py
tests/invalid/: assign_to_const.comp.hlsl  invalid_composite_literal.frag.hlsl  missing_parameter_semantic.vert.hlsl  missing_return.frag.hlsl  push_constant_with_binding.frag.hlsl  struct_with_default_field_value.vert.hlsl  zero_sized_array.frag.hlsl
tests/valid/: compute.comp.hlsl  included.hlsl  push_constant.frag.hlsl  simple.frag.hlsl  test.frag.hlsl  test.vert.hlsl
tinyshader/: spirv.h  tinyshader.c  tinyshader.h  tinyshader_analysis.c  tinyshader_ast_ir.c  tinyshader_internal.h  tinyshader_ir.c  tinyshader_lexer.c  tinyshader_misc.c  tinyshader_parser.c  tinyshader_preprocess.c  tinyshader_unity.c
tsc/: tsc.c
